signer/src/rzonec/rzonec.c

#line 1 "rzonec.rl"
/*
 * zonec.rl -- zone compiler based on ragel.
 *
 * Copyright (c) 2013, Matthijs Mekking, NLnet Labs. All rights reserved.
 *
 * See LICENSE for the license.
 *
 */

#include "rzonec/rzonec.h"
#include "util/log.h"
#include "util/status.h"

#include <assert.h>
#include <errno.h>
#include <fcntl.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <unistd.h>
#include <sys/types.h>
#include <sys/stat.h>

#define MAX_BUFSIZE 1024
#define DEFAULT_TTL 3600

static zparser_type* parser;

static const char* logstr = "rzonec";


/**
 * State machine.
 *
 */

#line 40 "rzonec.c"
static const int zparser_start = 810;
static const int zparser_first_final = 810;
static const int zparser_error = 0;

static const int zparser_en_line = 809;
static const int zparser_en_main = 810;


#line 42 "rzonec.rl"



/**
 * Create parser.
 *
 */
int
zparser_create()
{
    region_type* r = region_create();
    region_type* rrr = region_create();
    if (!r || !rrr) {
        return 0;
    }
    parser = (zparser_type*) region_alloc(r, sizeof(zparser_type));
    parser->tmp_rdata = (rdata_type*) region_alloc(r, DNS_RDATA_MAX *
        sizeof(rdata_type));
    parser->region = r;
    parser->rr_region = rrr;
    parser->origin = NULL;
    parser->ttl = DEFAULT_TTL;
    parser->klass = DNS_CLASS_IN;
    parser->line = 1;
    parser->comments = 0;
    parser->numrrs = 0;
    parser->totalerrors = 0;
    parser->rdsize = 0;
    parser->number = 0;
    parser->seconds = 0;
    parser->dname = NULL;
    parser->label = NULL;
    parser->dname_size = 0;
    parser->label_head = 0;
    parser->label_count = 0;
    /* resource records */
    parser->current_rr.ttl = DEFAULT_TTL;
    parser->current_rr.type = 0;
    parser->current_rr.klass = DNS_CLASS_IN;
    parser->current_rr.rdlen = 0;
    parser->current_rr.rdata = parser->tmp_rdata;
    return 1;
}


/**
 * Cleanup parser.
 *
 */
void
zparser_cleanup(void)
{
    region_cleanup(parser->rr_region);
    region_cleanup(parser->region);
    parser = NULL;
    return;
}


/**
 * Reads the specified zone into the memory.
 *
 */
int
rzonec_read_zone(const char* file)
{
    char buf[MAX_BUFSIZE];
    ssize_t r;
    int fd = open(file, O_RDONLY);
    if (fd == -1) {
        return ODS_STATUS_FOPENERR;
    }
    r = read(fd, buf, MAX_BUFSIZE);
    ods_log_debug("[%s] read %lu bytes.\n", logstr, r);
    if (r > 0) {
        int cs = 0;
/*        int res = 0; */
        char* p = &buf[0];
        char* pe = p + r + 1;
        char* eof = NULL;
        
#line 131 "rzonec.c"
	{
	cs = zparser_start;
	}

#line 123 "rzonec.rl"
        
#line 138 "rzonec.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr154:
#line 215 "zparser.rl"
	{
        parser->rdbuf[parser->rdsize] = '\0';
        if (!zonec_rdata_add(parser->rr_region, &parser->current_rr,
            DNS_RDATA_IPV4, parser->rdbuf, parser->rdsize)) {
            fprintf(stderr, "[zparser] error: line %d: bad IPv4 address "
                "'%s'\n", parser->line, parser->rdbuf);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
#line 191 "zparser.rl"
	{
        int i;
        rzonec_process_rr();
        dname_print(stderr, parser->current_rr.owner);
        fprintf(stderr, "\t%u", parser->current_rr.ttl);
        fprintf(stderr, "\t");
        rr_print_class(stderr, parser->current_rr.klass);
        fprintf(stderr, "\t");
        rr_print_rrtype(stderr, parser->current_rr.type);
        for (i = 0; i < parser->current_rr.rdlen; i++) {
            fprintf(stderr, " ");
            rdata_print(stderr, &parser->current_rr.rdata[i],
                parser->current_rr.type, i);
        }
        fprintf(stderr, "\n");
    }
#line 17 "zparser.rl"
	{
        parser->line++;
    }
	goto st810;
tr159:
#line 17 "zparser.rl"
	{
        parser->line++;
    }
	goto st810;
tr162:
#line 20 "zparser.rl"
	{
        parser->comments++;
    }
#line 17 "zparser.rl"
	{
        parser->line++;
    }
	goto st810;
tr577:
#line 117 "zparser.rl"
	{
        int i;
        parser->dname_size++;
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = 0;
        } else {
            fprintf(stderr, "[zparser] line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
        while (1) {
            if (label_is_pointer(parser->label)) {
                fprintf(stderr, "[zparser] line %d: domain has pointer label\n",
                    parser->line);
                parser->totalerrors++;
                p--; {goto st809;}
            }
            parser->label_offsets[parser->label_count] =
                (uint8_t)(parser->label - parser->dname_wire);
            ++parser->label_count;
            if (label_is_root(parser->label)) {
                break;
            }
            parser->label = label_next(parser->label);
        }
        assert(parser->label_count <= DNAME_MAXLEN / 2 + 1);
        /* reverse label offsets. */
        for (i = 0; i < parser->label_count / 2; ++i) {
            uint8_t tmp = parser->label_offsets[i];
            parser->label_offsets[i] =
                parser->label_offsets[parser->label_count - i - 1];
            parser->label_offsets[parser->label_count - i - 1] = tmp;
        }
        parser->dname = (dname_type *) region_alloc(parser->region,
            (sizeof(dname_type) +
            (parser->label_count + parser->dname_size) * sizeof(uint8_t)));
        if (!parser->dname) {
            fprintf(stderr, "[zparser] line %d: domain create failed\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
        parser->dname->size = parser->dname_size;
        parser->dname->label_count = parser->label_count;
        memcpy((uint8_t *) dname_label_offsets(parser->dname),
            parser->label_offsets, parser->label_count * sizeof(uint8_t));
        memcpy((uint8_t *) dname_name(parser->dname), parser->dname_wire,
            parser->dname_size * sizeof(uint8_t));
    }
#line 167 "zparser.rl"
	{
        parser->origin = parser->dname;
        fprintf(stderr, "[zparser] line %d: origin ", parser->line);
        dname_print(stderr, parser->origin);
        fprintf(stderr, "\n");
    }
#line 17 "zparser.rl"
	{
        parser->line++;
    }
	goto st810;
tr844:
#line 59 "zparser.rl"
	{
        parser->seconds += parser->number;
        parser->number = parser->seconds;
    }
#line 63 "zparser.rl"
	{
        parser->ttl = parser->number;
        fprintf(stderr, "[zparser] line %d: ttl %u\n", parser->line,
            (unsigned int) parser->ttl);
    }
#line 17 "zparser.rl"
	{
        parser->line++;
    }
	goto st810;
st810:
	if ( ++p == pe )
		goto _test_eof810;
case 810:
#line 279 "rzonec.c"
	switch( (*p) ) {
		case 9: goto st76;
		case 10: goto tr159;
		case 32: goto st76;
		case 34: goto tr852;
		case 36: goto st413;
		case 46: goto tr854;
		case 59: goto st77;
		case 64: goto tr855;
		case 92: goto tr856;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr852;
	} else if ( (*p) >= 11 )
		goto tr852;
	goto tr851;
tr179:
#line 70 "zparser.rl"
	{
        parser->label_head = parser->dname_size;
        parser->dname_size++;
    }
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st1;
tr851:
#line 174 "zparser.rl"
	{
        parser->current_rr.owner = NULL;
        parser->current_rr.ttl = parser->ttl;
        parser->current_rr.klass = parser->klass;
        parser->current_rr.type = 0;
        parser->current_rr.rdlen = 0;
        parser->current_rr.rdata = parser->tmp_rdata;
    }
#line 104 "zparser.rl"
	{
        bzero(&parser->dname_wire[0], DNAME_MAXLEN);
        bzero(&parser->label_offsets[0], DNAME_MAXLEN);
        parser->dname_size = 0;
        parser->label_count = 0;
        parser->label = parser->dname_wire;
    }
#line 70 "zparser.rl"
	{
        parser->label_head = parser->dname_size;
        parser->dname_size++;
    }
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 356 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st100;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr0;
tr0:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 391 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st102;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr5;
tr5:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 426 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st104;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr7;
tr7:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 461 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st106;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr9;
tr9:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 496 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st108;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr11;
tr11:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 531 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st110;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr13;
tr13:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st7;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
#line 566 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st112;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr15;
tr15:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 601 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st114;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr17;
tr17:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 636 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st116;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr19;
tr19:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 671 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st118;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr21;
tr21:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 706 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st120;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr23;
tr23:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 741 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st122;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr25;
tr25:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 776 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st124;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr27;
tr27:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 811 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st126;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr29;
tr29:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 846 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st128;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr31;
tr31:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 881 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st130;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr33;
tr33:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 916 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st132;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr35;
tr35:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 951 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st134;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr37;
tr37:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 986 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st136;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr39;
tr39:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 1021 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st138;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr41;
tr41:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
            parser->dname_wire[parser->dname_size] = (*p);
            parser->dname_size++;
        } else {
            fprintf(stderr, "[zparser] error: line %d: domain name overflow\n",
                parser->line);
            parser->totalerrors++;
            p--; {goto st809;}
        }
    }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 1056 "rzonec.c"
	switch( (*p) ) {
		case 9: goto tr1;
		case 32: goto tr1;
		case 34: goto tr2;
		case 36: goto tr2;
		case 46: goto tr3;
		case 59: goto tr2;
		case 64: goto tr2;
		case 92: goto st140;
	}
	if ( (*p) > 13 ) {
		if ( 40 <= (*p) && (*p) <= 41 )
			goto tr2;
	} else if ( (*p) >= 10 )
		goto tr2;
	goto tr43;
tr43:
#line 74 "zparser.rl"
	{
        if (parser->dname_size < DNAME_MAXLEN) {
